--- a/PathProject/style.css
+++ b/PathProject/style.css
@@ -7,7 +7,7 @@ body {
 h1 {
   text-align: center;
   display: block;
-  margin-top: 50px;
+  margin-top: 30vh;
   margin-bottom: 20px;
 }
 
@@ -15,6 +15,7 @@ p {
   text-align: center;
   display: block;
   margin-bottom: 20px;
+  margin-top: 40vh;
 }
 
 a {
@@ -24,7 +25,11 @@ a {
 }
 
 #start {
-  margin-top: 200px;
+  margin-top: 100px;
+}
+
+#end_day {
+  margin-top: 30px;
 }
 
 .day_bg{
@@ -33,6 +38,51 @@ a {
 
 .night_bg{
     background-color: black;
+}
+
+.top_bar{
+  display: flex;
+  background-color: ;
+}
+
+.progress_container_day {
+      background-color: lightgrey;
+      width: 100%;
+      height: 25px;
+      border-radius: 15px;
+      justify-content: center;
+      margin-right: 50px;
+}
+
+.progress_bar_day {
+      background-color: grey;
+      height: 15px;
+      color: white;
+      padding: 5px;
+      padding-right: 10px;
+      text-align: right;
+      font-size: 13px;
+      border-radius: 15px
+}
+
+.progress_container_night {
+      background-color: grey;
+      width: 100%;
+      height: 25px;
+      border-radius: 15px;
+      justify-content: center;
+      margin-right: 50px;
+}
+
+.progress_bar_night {
+      background-color: lightgrey;
+      height: 15px;
+      color: black;
+      padding: 5px;
+      padding-right: 10px;
+      text-align: right;
+      font-size: 13px;
+      border-radius: 15px
 }
 
 .toggle {
@@ -44,7 +94,19 @@ a {
   height: 600px;
   box-sizing: border-box;
   padding: 20px;
-  margin-top: 50px;
+  margin-top: 10px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  background-color: ;
+}
+
+.outer_end {
+  width: 500px;
+  height: 500px;
+  box-sizing: border-box;
+  padding: 20px;
+  margin-top: 0px;
   display: block;
   margin-left: auto;
   margin-right: auto;
@@ -63,10 +125,17 @@ a {
   margin-top: 45%;
 }
 
-
 .img {
   height: 560px;
   display: inline;
+  margin-left: 30;
+  margin-right: 30;
+}
+
+.img_last {
+  height: 450px;
+  display: inline;
+  justify-content: center;
   margin-left: 30;
   margin-right: 30;
 }
