--- a/archive-main/assets/style.css
+++ b/archive-main/assets/style.css
@@ -9,29 +9,33 @@ html{
 }
 
 h1 {
-	font-family: krona one;
+	font-family: avenir;
+	font-weight: bold;
+	text-transform: capitalize;
 	font-size: 48pt;
-	text-transform: uppercase;
 	text-align: center;
 	margin-bottom: 40px;
 	margin-top: 30px;
-	color: lightgray;
+	color: white;
 }
 
 h2 {
-	font-family: krona one;
+	font-family: avenir;
+	font-weight: bold;
 	font-size: 24pt;
-	color: #bcc5ff;
+	color: white;
+	margin: 20px;
 }
 
 h3 {
 	color: lightgray;
-	font-family: titillium web;
+	font-family: avenir;
 	font-weight: bold;
 }
 
 body {
-	font-family: titillium web;
+	font-family: avenir;
+	font-weight: lighter;
 	padding: 20px;
 	color: lightgray;
 }
@@ -41,19 +45,24 @@ a {
 }
 
 section {
-	margin-top: 40px;
+	margin: 40px;
 	/* max-width: 600px; */
 }
 
 figure {
 	margin-top: 40px;
 	/* max-width: 600px; */
+}
+
+.card {
 	display: flex;
+	margin: 20px;
+	columns: 3;
 }
 
 .link {
 	color: lightgray;
-	font-family: titillium web;
+	font-family: avenir;
 	font-weight: bold;
 }
 
@@ -62,18 +71,54 @@ figure {
 	width: auto;
 }
 
-.image-container {
+.song{
+	display: flex;
 	margin: 20px;
 }
 
+.play-container {
+	margin-left: 10px;
+	margin-right: 20px;
+	width: 15px;
+	padding-top: 15px;
+}
+
+.image-container {
+	margin-left: 10px;
+	margin-right: 10px;
+	width: 10%;
+}
+
+.title-container {
+	margin-left: 10px;
+	margin-right: 10px;
+	width: 30%;
+}
+
+.description-container {
+	margin-left: 10px;
+	margin-right: 10px;
+	width: 60%;
+}
+
 .container {
-		columns: 1;
+		columns: 3;
+		display: flex;
 }
 
 .block{
 	background-color: #191414;
 	background-image: linear-gradient(#585454 0%, #181414 200px);
 	padding: 20px;
+	margin: 10px;
+}
+
+.arrows{
+	display: flex;
+	width: 110px;
+}
+
+.arrow{
 	margin: 10px;
 }
 
